@@ -1,4 +1,8 @@
-﻿drkns 28.02.2016 20:01:24 +0200 - build 4565
+﻿drkns 29.02.2016 22:23:24 +0200 - build 4566
+
+1. Уточнение 4565.
+
+drkns 28.02.2016 20:01:24 +0200 - build 4565
 
 1. При детаче консоли (Ctrl+Shift+Tab) скопируем алиасы из старой в новую.
 
